Revert "feat: use logger for project"
This reverts commit c1dc7a08b9d27a6ab35a538a44a3c9cb2985e6d4.

--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   "author": "Overflow",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2",
-    "moment": "^2.22.2"
+    "discord.js": "^11.4.2"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
     "mocha": "^5.2.0"
   }
 }
