Adding 'fs' library

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Overflow",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
