--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord.json",
-  "version": "1.0.0",
+  "version": "1.0.1-rc01",
   "description": "Discord json api",
   "main": "index.js",
   "scripts": {
