--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
     "fs": "0.0.1-security"
   },
   "devDependencies": {
