Add command line lib to help

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "fs": "0.0.1-security",
     "moment": "^2.22.2",
-    "fs": "0.0.1-security"
+    "stdio": "^0.2.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
