--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "eslint": "^5.8.0",
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "stdio": "^0.2.7"
