--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "discord.json",
-  "version": "1.0.1-rc01",
-  "description": "Discord json api",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "keywords": [
-    "Discord",
-    "json"
-  ],
-  "author": "Overflow",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^11.4.2",
-    "eslint": "^5.8.0",
-    "fs": "0.0.1-security",
-    "moment": "^2.22.2",
-    "stdio": "^0.2.7"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^5.2.0"
-  }
+    "name": "discord.json",
+    "version": "1.0.1-rc01",
+    "description": "Discord json api",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha && standard",
+        "mocha": "mocha",
+        "standard": "standard",
+        "standard:fix": "standard --fix"
+    },
+    "keywords": [
+        "Discord",
+        "json"
+    ],
+    "author": "Overflow",
+    "license": "ISC",
+    "dependencies": {
+        "discord.js": "^11.4.2",
+        "eslint": "^5.8.0",
+        "fs": "0.0.1-security",
+        "moment": "^2.22.2",
+        "stdio": "^0.2.7"
+    },
+    "devDependencies": {
+        "chai": "^4.2.0",
+        "chai-as-promised": "^7.1.1",
+        "mocha": "^5.2.0",
+        "standard": "^12.0.1"
+    },
+    "standard": {
+        "ignore": [
+            "test/**/**.js"
+        ]
+    }
 }
